--- a/yes_page.html
+++ b/yes_page.html
@@ -8,15 +8,15 @@
         body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            position: relative;
+            overflow-x: hidden;
+            overflow-y: auto;
             background-color: #f8f9fa;
         }
 
         .container {
             position: relative;
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            min-height: 100vh;
         }
 
         .header_text {
