--- a/yes_page.html
+++ b/yes_page.html
@@ -72,7 +72,7 @@
     <img src="5.jpeg">
 
     <div class="text-box">
-      <h1 class="header_text">Knew you would say yes! 💖<br>I love you, Lokkhi.</h1>
+      <h1 class="header_text">Tomake rose diye rose ke bolbo this is how a rose looks like<br>I love you, shonamoni.</h1>
     </div>
 
     <img src="6.jpeg">
